--- a/css/style.css
+++ b/css/style.css
@@ -1,21 +1,18 @@
 body{
     font-family: 'Times New Roman', Times, serif;
     margin: 0;
-    padding: 0;
-    min-height: 100vh;
+    padding: 0;    
+}
 
+header{
+    text-align: center;
+    background-color: #e6e6e6;    
 }
 
 
 
-img{
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-}
 
 h1{
-    text-align: center;
     font-size: 35px;
 }
 
@@ -28,7 +25,7 @@ h1, h2 {
     background-color: #C4C4C4;
     color:#005677;
     text-transform: uppercase;
-    letter-spacing: 5px;
+    letter-spacing: 10px;
     font-weight: 700;
 
 }
@@ -68,7 +65,7 @@ footer{
     background-color: #005677;
     color: #FFFFFF;
     position: fixed;
-   width: 100%;
+    width: 100%;
     bottom: 0;
 }
 
